# deepiri-modelkit

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.jupyter  RAG_ARCHITECTURE.md  README.md  arch.txt  pyproject.toml  requirements-jupyter.txt
.git-hooks/: README.md
.github/codeql/: README.md  codeql-config.yml
.github/workflows/: ci.yml
src/deepiri_modelkit/: __init__.py  logging.py
src/deepiri_modelkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/deepiri_modelkit/contracts/: __init__.py  contract.py  events.py  models.py  services.py  training.py
src/deepiri_modelkit/data/: __init__.py  manifest_validator.py  monitoring.py  validation.py
src/deepiri_modelkit/ml/: __init__.py  confidence.py  semantic.py
src/deepiri_modelkit/rag/: README.md  __init__.py  advanced_retrieval.py  async_processing.py  base.py  caching.py  monitoring.py  processors.py  retrievers.py  testing.py
src/deepiri_modelkit/registry/: __init__.py  model_registry.py
src/deepiri_modelkit/registry/adapters/: __init__.py  local_adapter.py  mlflow_adapter.py  s3_adapter.py
src/deepiri_modelkit/streaming/: __init__.py  event_stream.py  schemas.py  sidecar_utils.py  topics.py
src/deepiri_modelkit/training/: __init__.py  helox_helpers.py  integration.py  job_queue.py  manifest_io.py  pipeline_factory.py  run_context.py
src/deepiri_modelkit/utils/: __init__.py  device.py
tests/: test_contracts.py  test_helox_helpers.py  test_manifest_io.py  test_manifest_validator.py  test_streaming_topics.py  test_training_jobs.py
